# rawkode

./: .editorconfig  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  README.md  build.cue  bunfig.toml  comtrya.cue  env.cue  package.json  secrets.yaml
presentations/opentelemetry-cli-applications/: .gitignore  Cargo.toml  Justfile  docinfo-footer.html  presentation.adoc
presentations/opentelemetry-cli-applications/css/: reveal-override.css
presentations/opentelemetry-cli-applications/src/: main.rs  otel.rs  simple.rs
projects/web-links/worker/: Cargo.toml  Dockerfile  package-lock.json  package.json  tsconfig.json  wrangler.toml
rawko/: .gitignore  .rawko.ts  Cargo.toml  Justfile  README.md  TODO.md  cli.ts  deno.json  mod.ts  rustfmt.toml
rawko/.claude/: settings.local.json
rawko/.rawko/: .gitignore  config.cue
rawko/.rawko/agents/: README.md  architecture-council.mdx  implementation-engineer.mdx  manager.mdx  product-researcher.mdx  qa-council.mdx
rawko/.rawko/cue.mod/: module.cue
rawko/docs/: INDEX.md  README.md  REVIEW-STATE-AND-MEMORY.md
rawko/docs/adrs/: 0001-deno-typescript.md  0002-provider-abstraction.md  0003-xstate-fsm.md  0004-agent-config-format.md  0005-llm-arbiter.md  0006-tool-filtering.md
rawko/docs/conventions/: AGENT-FILES-MARKDOWN.md  MEMORY-FILES-MARKDOWN.md  MEMORY-FILES.md
rawko/docs/specs/: 0001-core-architecture.md  0002-provider-interface.md  0003-xstate-machine.md  0004-agent-config-schema.md  0005-long-term-memory.md  0006-arbiter-context-construction.md  0007-arbiter-memory-injection.md  0008-agent-configuration.md  0009-memory-architecture.md  0010-plan-schema.md
rawko/documentation/: README.md
rawko/documentation/adrs/: 0001-rust-language.md  0002-acp-protocol.md  0003-statig-fsm.md  0004-tokio-runtime.md  0006-llm-arbiter.md  (+5 more)
rawko/runtime/: README.md  deno.json
rawko/schema/: rawko.cue
rawko/scripts/: dev.sh
rawko/specs/: README.md  rawko-cli-spec.md
rawko/src/: error.rs  lib.rs  main.rs  mod.ts  types.rs
rawko/web/: .gitignore  README.md  astro.config.mjs  deno.json  package.json  panda.config.ts
(+2516 files in other folders)
