[package]
name = "rawko"
version = "0.1.0"
edition = "2021"
description = "An agentic coding robot with FSM orchestration"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "process", "time", "sync", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["compat", "rt"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
rand = "0.8"
regex = "1"
uuid = { version = "1", features = ["v4"] }

# Configuration
cuengine = { path = "/Users/rawkode/Code/src/github.com/cuenv/cuenv/crates/cuengine" }
dirs = "5"
tempfile = "3"

# ACP (Agent Client Protocol)
agent-client-protocol = "0.9"
async-trait = "0.1"

# State machine
statig = { version = "0.4", features = ["async"] }
