[package]
name = "opentelemetry-for-command-line-applications"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "simple"
path = "src/main.rs"

[[bin]]
name = "otel"
path = "src/otel.rs"

[dependencies]
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
opentelemetry_sdk = "0.21"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }

structopt = { version = "0.3", default-features = false }

tracing = { version = "0.1" }
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3", features = ["json"] }
