[package]
name = "web-links"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
http = "0.2.8"
phf = { version = "0.10", features = ["macros"] }
serde_json = "1.0.67"
url = "2.2.2"
worker = "0.0.9"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
